--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "moment-locales-webpack-plugin": "^1.0.7",
     "webpack": "4.29.5",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "moment": "^2.24.0"
   }
 }
